# src/routes/getBussiness/getBussiness.route.ts
@@ -1,0 +1,6 @@
+import { Router } from 'express';
+import { getCompanyByBusinessId } from '../../controllers/getCompany.controller';
+
+const router = Router();
+router.get('/company/:businessId', getCompanyByBusinessId as any);
+export default router;
