# src/routes/getMessages/getMessage.route.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import { getMessages } from '../../controllers/getMessages.controller';
+
+const router = Router();
+
+router.get('/bussiness/messages', getMessages as any);
+
+
+export default router;
